Data stream support read and write with custom routing and partition size (#74394)