@@ -2380,8 +2380,16 @@ public class IndexNameExpressionResolverTests extends ESTestCase {
                 .put(index1, false)
                 .put(index2, false)
                 .put(justAnIndex, false)
-                .put(new DataStream(dataStream1, createTimestampField("@timestamp"),
-                    Arrays.asList(index1.getIndex(), index2.getIndex()), 2, Collections.emptyMap(), true, false))).build();
+                .put(new DataStream(
+                    dataStream1,
+                    createTimestampField("@timestamp"),
+                    org.elasticsearch.core.List.of(index1.getIndex(), index2.getIndex()),
+                    2,
+                    Collections.emptyMap(),
+                    true,
+                    false,
+                    false)
+                )).build();
 
         Index[] result = indexNameExpressionResolver.concreteIndices(state, IndicesOptions.strictExpandHidden(), true, "logs-*");
         assertThat(result, arrayContainingInAnyOrder(index1.getIndex(), index2.getIndex(), justAnIndex.getIndex() ));
